--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,66 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.animaldispersal.MainActivity">
+    tools:context="com.example.animaldispersal.MainActivity"
+    android:orientation="vertical"
+    android:weightSum="100"
+    >
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="70"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:weightSum="3"
+
+        >
+        <LinearLayout
+            android:orientation="vertical"
+            style="@style/sectionHeaderBar"
+            android:visibility="gone">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/nfc"
+                android:id="@+id/textView5"
+                style="@style/sectionHeaderText"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:background="@drawable/main_menu_section">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/MainMenuSectionHeader"
+                android:text="@string/nfcAvailableEnabled"
+                android:id="@+id/nfc_header" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/MainMenuSectionMessage"
+                android:text="@string/nfcOn"
+                android:id="@+id/nfc_text2" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/text"
+                android:id="@+id/nfc_text" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/refresh"
+                android:id="@+id/refresh_nfc_button"
+                android:visibility="gone" />
+        </LinearLayout>
+        <LinearLayout
+            style="@style/sectionHeaderBar"
+            android:visibility="gone">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/internet_connection_heading"
+                android:id="@+id/textView2"
+                android:singleLine="true"
+                style="@style/sectionHeaderText"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:background="@drawable/main_menu_section"
+            android:id="@+id/syncLinearLayout">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/sync_status_on"
+                android:id="@+id/syncStatus"
+                style="@style/MainMenuSectionHeader"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/internet_on"
+                android:id="@+id/syncStatusMessage"
+                style="@style/MainMenuSectionMessage"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/records_to_be_synced_heading"
+                android:id="@+id/syncRecordCount"
+                style="@style/MainMenuSectionMessage"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/sync_records"
+                android:id="@+id/sync_button"
+                android:visibility="gone"
+                />
+        </LinearLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:background="@drawable/main_menu_section"
+        android:id="@+id/searchLinearLayout"
+        >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/nfc"
-            android:id="@+id/textView5"
-            style="@style/sectionHeader"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/text"
-            android:id="@+id/nfc_text" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/refresh"
-            android:id="@+id/refresh_nfc_button"
-            android:visibility="gone" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/internet_connection_heading"
-            android:id="@+id/textView2"
-            android:singleLine="true"
-            style="@style/sectionHeader" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/on_off_heading"
-            android:id="@+id/internet" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/records_to_be_synced_heading"
-            android:id="@+id/syncRecordCount"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sync_records"
-            android:id="@+id/sync_button"
-            />
-
-        <!-- TODO TO BE REMOVED WHEN LIVE
+            android:text="Search"
+            style="@style/MainMenuSectionHeader"
+            android:id="@+id/textView7"
+            android:drawableLeft="@mipmap/ic_search"/>
+    </LinearLayout>
+        <!-- ANIMAL LISTVIEW ON MAIN ACTIVITY
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -84,5 +150,5 @@
             /-->
 
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
 
