--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,11 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.animaldispersal.SearchActivity">
+
+    <android.support.v7.widget.SearchView
+        android:id="@+id/searchView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:imeOptions="flagNoExtractUi"
+        >
+    </android.support.v7.widget.SearchView>
+
     <RelativeLayout
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:id="@+id/relativeLayout1"
-        android:background="@color/colorPrimary">
+        android:background="@color/colorPrimary"
+        android:layout_below="@+id/searchView"
+        android:visibility="gone">
         <TextView
             android:id="@+id/searchLabel1"
             android:layout_width="100dp"
@@ -75,11 +86,10 @@
         android:layout_height="wrap_content"
         android:text="@string/no_records_found"
         android:id="@+id/no_animals_text"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/searchView"
         android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:visibility="invisible"
-        />
+        android:layout_alignParentStart="false"
+        android:visibility="gone" />
 </RelativeLayout>
