--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -2,18 +2,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
     <TextView
-        android:id="@+id/event_date_time"
+        android:id="@+id/event_date"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="@string/event_date_time" />
+        android:text="Event Date" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Event Time"
+        android:id="@+id/event_time"
+        android:layout_below="@+id/event_date"
+        android:layout_alignParentStart="true" />
     <TextView
         android:id="@+id/event_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/event_type"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/event_date_time"
-        android:layout_toEndOf="@+id/event_date_time"
+        android:layout_toRightOf="@+id/event_date"
+        android:layout_toEndOf="@+id/event_date"
         android:maxLines="1"/>
 
     <TextView
@@ -22,7 +29,9 @@
         android:text="@string/event_remarks"
         android:id="@+id/event_remarks"
         android:layout_below="@+id/event_type"
-        android:layout_toRightOf="@+id/event_date_time"
-        android:layout_toEndOf="@+id/event_date_time"
+        android:layout_toRightOf="@+id/event_date"
+        android:layout_toEndOf="@+id/event_date"
         android:maxLines="1"/>
+
+
 </RelativeLayout>
