--- a/app/src/main/res/menu/animal_activity_menu.xml
+++ b/app/src/main/res/menu/animal_activity_menu.xml
@@ -4,6 +4,7 @@
     <item android:id="@+id/home_icon"
         android:icon="@drawable/ic_action_name"
         android:title="@string/home"
-        app:showAsAction="always">
+        app:showAsAction="always"
+        >
     </item>
 </menu>
