--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,8 @@
     <color name="colorPrimaryDark">#757575</color>
     <color name="colorAccent">#009688</color>
     <color name="emphasis">#FF003DF5</color>
-    <color name="bg_gray">#cecbce</color>
+    <color name="red">#FF0000</color>
+    <color name="bg_gray">#a7a5a7</color>
     <color name="white">#FFFFFF</color>
     <color name="altrow">#DEFAE3</color>
     <color name="background_material_light">#FAFAFA</color>
