--- a/app/src/main/res/values/resources.xml
+++ b/app/src/main/res/values/resources.xml
@@ -1,5 +1,6 @@
 <resources>
     <string-array name="country_titles">
+        <item></item>
         <item>Bangladesh</item>
         <item>Pakistan</item>
         <item>Philippines</item>
