--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,14 +12,33 @@
     <style name="ThemeOverlay.AppTheme.ActionBar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
         <item name="android:textColorPrimary">@color/white</item>
     </style>
-    <style name="sectionHeader" parent="android:Widget.Holo.Light.TextView">
-        <item name="android:drawableBottom">@drawable/section_header</item>
+    <style name="MainMenuSectionHeader">
+        <item name="android:typeface">serif</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16pt</item>
+        <item name="android:textColor">@color/colorPrimary</item>/>
+    </style>
+    <style name="MainMenuSectionMessage">
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textSize">10pt</item>
+        <item name="android:textColor">@color/bg_gray</item>/>
+    </style>
+    <style name="sectionHeaderText" parent="android:Widget.Holo.Light.TextView">
+        <!--item name="android:drawableBottom">@drawable/section_header</item-->
         <item name="android:drawablePadding">4dp</item>
-        <item name="android:layout_marginTop">8dp</item>
-        <item name="android:paddingLeft">4dp</item>
+        <!--item name="android:layout_marginTop">8dp</item-->
+        <!--item name="android:paddingLeft">4dp</item-->
         <item name="android:textColor">@color/colorAccent</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
+    </style>
+    <style name="sectionHeaderBar" parent="android:Widget.Holo.Light.TextView">
+        <item name="android:background">@drawable/heading_border</item>
+        <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:gravity">center_vertical</item>
     </style>
     <!-- custom action button -->
     <style name="EditEventCustomActionButton" parent="android:style/Widget.Holo.Light.ActionButton">
@@ -44,5 +63,7 @@
         <item name="android:singleLine">true</item>
         <item name="android:ellipsize">none</item>
         <item name="android:padding">4dp</item>
+    </style>
+    <style name="spinnerDropDownStyle" parent="android:Widget.Spinner">
     </style>
 </resources>
