--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:imeOptions="flagNoExtractUi"
+        android:queryHint="@string/enter_search"
         >
     </android.support.v7.widget.SearchView>
 
