--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -28,24 +28,11 @@
                         android:id="@+id/textView16"
                         style="@style/sectionHeaderText"/>
             </LinearLayout>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/event_type"
-                    android:id="@+id/textView1" />
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/event_type"
-                    android:layout_marginBottom="@dimen/activity_vertical_margin"
-                    android:imeOptions="flagNoExtractUi|actionNext"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:inputType="textCapSentences" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Event Date"
+                    android:text="@string/event_date"
                     android:id="@+id/textView2" />
 
                 <EditText
@@ -61,7 +48,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Event Time"
+                    android:text="@string/event_time"
                     android:id="@+id/textView4"
                     />
 
@@ -73,22 +60,35 @@
                     android:maxLines="1"
                     android:singleLine="true"
                     android:id="@+id/event_time" />
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/event_type"
+                android:id="@+id/textView1" />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/event_type"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:imeOptions="flagNoExtractUi|actionNext"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:inputType="textCapSentences" />
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/event_remarks"
                     android:id="@+id/textView3" />
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/event_remarks"
-                    android:layout_marginBottom="@dimen/activity_vertical_margin"
-                    android:imeOptions="flagNoExtractUi|actionNext"
-                    android:gravity="left|top"
-                    android:inputType="textMultiLine|textCapSentences"
-                    android:maxLength ="2000"
-                    android:scrollHorizontally="false"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/event_remarks"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:imeOptions="flagNoExtractUi|actionNext"
+                android:gravity="left|top"
+                android:inputType="textMultiLine|textCapSentences"
+                android:maxLength ="2000"
+                android:scrollHorizontally="false"/>
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
