--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -17,7 +17,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="LANGUAGE"
+            android:text="@string/language"
             android:id="@+id/textView9"
             style="@style/sectionHeaderText"/>
     </LinearLayout>
@@ -27,16 +27,24 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
-        <Spinner
+        <!--VY 201705017 redesign to radiogroup
+        Spinner
             android:id="@+id/spinner1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content" /-->
+
+
+        <RadioGroup
+            android:id="@+id/language_radiogroup"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:showDividers="middle"></RadioGroup>
 
         <Button
             android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/save" android:onClick="onClick"/>
+            android:text="@string/ok" android:onClick="onClick"/>
 
 
     </LinearLayout>
