--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -5,11 +5,11 @@
         android:id="@+id/event_date"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Event Date" />
+        android:text="@string/event_date" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Event Time"
+        android:text="@string/event_time"
         android:id="@+id/event_time"
         android:layout_below="@+id/event_date"
         android:layout_alignParentStart="true" />
