--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#02B221</color>
     <color name="colorPrimaryDark">#757575</color>
-    <color name="colorAccent">#009688</color>
+    <color name="colorAccent">#02b221</color>
     <color name="emphasis">#FF003DF5</color>
     <color name="red">#FF0000</color>
     <color name="bg_gray">#a7a5a7</color>
