--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorPrimary</item>
         <item name="actionBarTheme">@style/ThemeOverlay.AppTheme.ActionBar</item>
         <item name="android:colorBackground">@color/background_material_light</item>
     </style>
@@ -28,7 +28,7 @@
         <item name="android:drawablePadding">4dp</item>
         <!--item name="android:layout_marginTop">8dp</item-->
         <!--item name="android:paddingLeft">4dp</item-->
-        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
     </style>
@@ -47,22 +47,6 @@
         <item name="android:layout_weight">1</item>
         <item name="android:focusable">true</item>
         <item name="android:orientation">horizontal</item>
-    </style>
-    <style name="EditEventCustomActionButtonImage">
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:padding">4dp</item>
-    </style>
-
-    <style name="EditEventCustomActionButtonText">
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:textAppearance">?android:attr/actionMenuTextAppearance</item>
-        <item name="android:textColor">@color/colorAccent</item>
-        <item name="android:orientation">horizontal</item>
-        <item name="android:singleLine">true</item>
-        <item name="android:ellipsize">none</item>
-        <item name="android:padding">4dp</item>
     </style>
     <style name="spinnerDropDownStyle" parent="android:Widget.Spinner">
     </style>
